message Return
{
	required int64 code = 1;
	required string msg = 2;
}

message Header
{
	optional string router = 1;
	optional int64 session_id = 2;
	optional int64 player_id = 3;
	optional int64 client_id = 4;
	optional string service_name = 5;
	optional string task_id = 6;
	optional string channel_id = 7;
	optional string module_id = 8;
	optional string message_id = 9;
	optional int64 time = 10; //包发送时的时间
	optional int64 sequence_id = 11;
}

